--- a/_includes/theme-home-jeremy-1.html
+++ b/_includes/theme-home-jeremy-1.html
@@ -22,7 +22,7 @@
                 <div class="ui one column center aligned relaxed grid">
                     <div class="middle aligned column">
                         <div class="ui vertical inverted basic huge buttons">
-                            <a href="{{ site.baseurl}}/bio/">
+                            <a href="{{ site.baseurl}}/{{ site.data.bio.basics.resume }}" target="_blank">
                                 <button style="margin-bottom: 10px" class="ui inverted basic huge button">{{ site.bio-page-label }}</button>
                             </a>
                             <a href="{{ site.baseurl}}/projects/">
