--- a/_includes/menubar.html
+++ b/_includes/menubar.html
@@ -16,7 +16,7 @@
     {% if num_essays > 0 %}
     <a href="{{ site.baseurl }}/essays" class=" {% if include.active == "essays" %} active {% endif %} item">Essays ({{ num_essays }})</a>
     {% endif %}
-    <a href="{{ site.baseurl}}/{{ site.data.bio.basics.resume }}" target="_blank">{{ site.bio-page-label }}</a>
+    <a href="{{ site.baseurl}}/{{ site.data.bio.basics.resume }}" class="active item" target="_blank">{{ site.bio-page-label }}</a>
     <!-- <a href="{{ site.baseurl }}/bio" class=" {% if include.active == "bio" %} active {% endif %} item">{{ site.bio-page-label }}</a> -->
   </nav>
 </div>
