--- a/_includes/theme-home-jeremy-1.html
+++ b/_includes/theme-home-jeremy-1.html
@@ -15,7 +15,7 @@
                 <div class="sub header">{{ site.data.bio.basics.label }}</div>
             </h1>
             <h4 style="margin-bottom:100px; margin-top: 100px" class="ui header">{{ site.data.bio.basics.summary }}</h4>
-            <p style="font-style: italic; font-size:80%">"For eternally and always there is only now, one and the same now, the present is the only thing that has no end." -Alan Watts</p>
+            <p style="font-style: italic; font-size:80%"></p>
         </div>
 
         <div class="black column">
